# energy-billing-experiment

./: .gitignore  README.md
src/: CMakeLists.txt  billing_tools.hpp  client_setup_and_server_billing.cpp  csprng.cpp  csprng.h  csprng_aes_ni.cpp  csprng_aes_ni.h  sharing_total_deviation.cpp  switch_aes_lib.sh  utils_ckks.cpp  utils_ckks.h  vectorutils.hpp
